# bunkai

./: .coveragerc  .gitignore  .isort.cfg  .markdownlint.json  CITATION.cff  Makefile  README.md  _typos.toml  check_version.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  setup.cfg
.circleci/: check_head.py  check_version.py  config.yml  show_method_names.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  typos.yml
bunkai/: __init__.py  cli.py  constant.py
bunkai/algorithm/bunkai_sbd/: bunkai_sbd.py
bunkai/algorithm/bunkai_sbd/annotator/: __init__.py  basic_annotator.py  constant.py  dot_exception_annotator.py  emoji_annotator.py  emotion_expression_annotator.py  facemark_detector.py  indirect_quote_exception_annotator.py  linebreak_annotator.py  linebreak_annotator_compat.py  linebreak_force_annotator.py  morph_annotator.py  number_exception_annotator.py
bunkai/algorithm/lbd/: corpus.py  custom_tokenizers.py  dist.py  predict.py  train.py
bunkai/algorithm/tsunoda_sbd/: tsunoda_sbd.py
bunkai/algorithm/tsunoda_sbd/annotator/: __init__.py  basic_annotator.py  constant.py  exception_no.py  exception_numeric.py  exception_particle.py  morph_annotator_janome.py  replace_parentheses.py
bunkai/base/: annotation.py  annotator.py
bunkai/experiment/: evaluate.py  statics.py
bunkai/experiment/convert/: bccwj.py  jalan.py
bunkai/third/: run_ner.py  utils_ner.py
docs/: algorithms.md  training.md
example/: example001.py
mks/: lbd.mk  lint.mk  vanilla.mk
tests/: run_test.py  sample.gold.txt  test_cli.py
tests/bunkai_sbd/: test_bukai_sbd.py
tests/bunkai_sbd/annotator/: annotation_test_base.py  test_basic_annotator.py  test_emoji_annotator.py  test_emotion_expression_annotator.py  test_facemark_detector.py  test_indirect_quote_exception_annotator.py  test_linebreak_exception_annotator.py  test_morph_annotator.py  test_number_exception_annotator.py  test_numeric_expression_exception_annotator.py
tests/experiment/: test_evaluate.py
tests/lbd/: test_predict.py
tests/resources/: annotated.jsonl
tests/tsunoda_sbd/: test_tsunoda_sbd.py
tests/tsunoda_sbd/rules/: basic_annotator.py
