[tool.poetry]
name = "bunkai"
version = "1.4.3"
description = "Sentence boundary disambiguation tool for Japanese texts"
authors = ["Yuta Hayashibe <hayashibe@megagon.ai>", "Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
maintainers = ["Yuta Hayashibe <hayashibe@megagon.ai>", "Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/megagonlabs/bunkai"
repository = "https://github.com/megagonlabs/bunkai"
documentation = ""
keywords = ["Japanese", "Sentence boundary disambiguation"]

[tool.poetry.dependencies]
python = "^3.7"
dataclasses-json = ">=0.5.2"
janome = ">=0.4.1"
seqeval = ">=1.2.2"
spans = ">=1.1.0"
tqdm = "*"
numpy = ">=1.16.0"
torch = ">=1.3.0"
transformers = ">=4.3.2"
more_itertools = ">=8.6.0"
emoji = ">=1.2.0"
emojis = ">=0.6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
coverage = ">=5.3"
demjson = ">=2.2.4"
flake8 = ">=3.8.4"
isort = ">=5.9.3"
yamllint = ">=1.25.0"
mock = ">=4.0.2"
pydocstyle = ">=5.1.1"
pyright = ">=0.0.10"
black = "^21.10b0"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bunkai = "bunkai.cli:main"

[tool.pyright]
pythonVersion = "3.7"
typeCheckingMode = "basic"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
