[tool.poetry]
name = "bunkai"
version = "1.5.7"
description = "Sentence boundary disambiguation tool for Japanese texts"
authors = ["Yuta Hayashibe <hayashibe@megagon.ai>", "Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
maintainers = ["Yuta Hayashibe <hayashibe@megagon.ai>", "Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/megagonlabs/bunkai"
repository = "https://github.com/megagonlabs/bunkai"
documentation = ""
keywords = ["Japanese", "Sentence boundary disambiguation"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
dataclasses-json = ">=0.5.2"
janome = ">=0.4.1"
seqeval = {version = ">=1.2.2", optional = true}
spans = ">=1.1.0"
tqdm = "*"
numpy = {version = ">=1.16.0", optional = true}
torch = {version = ">=1.3.0", optional = true}
transformers = {version = ">=4.22.0", optional = true}
more_itertools = ">=8.6.0"
emoji = ">=2.0.0"
emojis = ">=0.6.0"
toml = ">=0.10.2"
requests = {version = "^2.27.1", optional = true}
regex = {version = "!=2022.7.24", optional = true}

[tool.poetry.dev-dependencies]
coverage = ">=5.3"
flake8 = ">=3.8.4"
isort = ">=5.9.3"
yamllint = ">=1.25.0"
mock = ">=4.0.2"
pydocstyle = ">=5.1.1"
black = ">=21.10b0"

[tool.poetry.extras]
lb = ["torch", "transformers", "numpy", "requests"]
train = ["seqeval"]

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bunkai = "bunkai.cli:main"

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
exclude = ["**/third", ".venv", "**/node_modules", "**/__pycache__",]
reportPrivateImportUsage = "information"
reportUnusedVariable="warning"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
